<resources>
    <string name="app_name">Online Voting App</string>
    <string name="todo">TODO</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="re_password">Re-Password</string>
    <string name="already_account_login">Already Account Login</string>
    <string name="sign_out">SignOut</string>
    <string name="share_app">Share App</string>
    <string name="submit">Submit</string>
    <string name="remember_password_login">Remember Password? Login</string>
    <string name="enter_name">Enter Name</string>
    <string name="vote">Vote</string>
    <string name="upload_aadhaar">Upload Aadhaar</string>
    <string name="upload_voter_card">Upload Voter Card</string>
    <string name="next">Next</string>
    <string name="list_of_polling_station">List of Polling Station</string>
    <string name="assembly_map">Assembly Map</string>
    <string name="enter_aadhaar_number">Enter Aadhaar Number</string>
    <string name="enter_voter_id_number">Enter Voter ID Number</string>
    <string name="enter_name_as_per_aadhaar_or_voter_id">Enter Name As Per Aadhaar or Voter Id</string>
    <string name="send_otp">Send OTP</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="voter_id_number">Voter Id Number</string>
</resources>