<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/polling"
        android:title="@string/list_of_polling_station"/>

<!--    <item-->
<!--        android:id="@+id/map"-->
<!--        android:title="@string/assembly_map"/>-->

<!--    <item-->
<!--        android:id="@+id/share"-->
<!--        android:title="@string/share_app"/>-->

    <item
        android:id="@+id/share"
        android:title="@string/share_app"/>

    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/lock"
        android:title="@string/sign_out"/>

    <item
        android:id="@+id/vote"
        app:showAsAction="always"
        android:title="@string/vote"/>

</menu>