<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/logo"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/text"
        app:hintTextColor="@color/text"
        app:endIconMode="clear_text"
        app:endIconTint="@color/text"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/text"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/text"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/text"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/text"
        app:hintTextColor="@color/text"
        app:startIconDrawable="@drawable/lock"
        app:startIconTint="@color/text"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textCursorDrawable="@drawable/cursor"
            android:textColor="@color/text"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForget"
        android:layout_width="209dp"
        android:layout_height="31dp"
        android:text="@string/forget_password"
        android:textColor="#FDC800"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_round"
            android:text="@string/login"
            android:textColor="@color/background"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_round"
            android:text="@string/register"
            android:textColor="@color/background"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>