<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ForgetPassword">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/logo"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/text"
        app:hintTextColor="@color/text"
        app:endIconMode="clear_text"
        app:endIconTint="@color/text"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/text"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textCursorDrawable="@drawable/cursor"
            android:inputType="textEmailAddress"
            android:textColor="@color/text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/Submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:background="@drawable/button_round"
        android:text="@string/submit"
        android:textColor="@color/background"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password_login"
        android:textColor="@color/text"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>


</LinearLayout>