<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:id="@+id/logo"
                android:src="@drawable/logo"
                android:contentDescription="@string/todo"/>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/enter_name"
                android:textColorHint="@color/text"
                app:hintTextColor="@color/text"
                app:endIconMode="clear_text"
                app:endIconTint="@color/text"
                app:startIconDrawable="@drawable/person"
                app:startIconTint="@color/text"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/text"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

    <!--            <com.google.android.material.textfield.TextInputLayout-->
    <!--                style="@style/InputField"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_margin="6dp"-->
    <!--                android:layout_weight="1"-->
    <!--                android:hint="@string/enter_name"-->
    <!--                android:textColorHint="@color/text"-->
    <!--                app:hintTextColor="@color/text"-->
    <!--                app:endIconMode="clear_text"-->
    <!--                app:endIconTint="@color/text"-->
    <!--                app:startIconDrawable="@drawable/person"-->
    <!--                app:startIconTint="@color/text"-->
    <!--                tools:ignore="RtlSymmetry">-->

    <!--                <com.google.android.material.textfield.TextInputEditText-->
    <!--                    android:id="@+id/lName"-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:layout_weight="1"-->
    <!--                    android:ems="10"-->
    <!--                    android:textCursorDrawable="@drawable/cursor"-->
    <!--                    android:inputType="text"-->
    <!--                    android:textColor="@color/text"-->
    <!--                    android:textSize="18sp"-->
    <!--                    tools:ignore="RtlSymmetry" />-->
    <!--            </com.google.android.material.textfield.TextInputLayout>-->


            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/enter_email"
                android:textColorHint="@color/text"
                app:hintTextColor="@color/text"
                app:endIconMode="clear_text"
                app:endIconTint="@color/text"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/text"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:hint="@string/enter_mobile_number"
                android:textColorHint="@color/text"
                app:hintTextColor="@color/text"
                app:endIconMode="clear_text"
                app:endIconTint="@color/text"
                app:startIconDrawable="@drawable/phone"
                app:startIconTint="@color/text"
                app:prefixText="+91"
                app:prefixTextColor="@color/text"
                app:counterMaxLength="10"
                app:helperTextTextColor="@color/purple_200"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textCursorDrawable="@drawable/cursor"
                    android:inputType="phone"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:textColorHint="@color/text"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/text"
                app:hintTextColor="@color/text"
                app:startIconDrawable="@drawable/lock"
                app:startIconTint="@color/text"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textCursorDrawable="@drawable/cursor"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:textColorHint="@color/text"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/text"
                app:hintTextColor="@color/text"
                app:startIconDrawable="@drawable/lock"
                app:startIconTint="@color/text"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textCursorDrawable="@drawable/cursor"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:orientation="horizontal">-->

<!--                <ImageButton-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/aadhaarView"-->
<!--                    android:background="@color/background"-->
<!--                    android:tag="Upload"-->
<!--                    android:visibility="gone"/>-->

<!--                <Button-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/upload_aadhaar"-->
<!--                    android:textColor="@color/background"-->
<!--                    android:background="@drawable/button_round"-->
<!--                    android:padding="8dp"-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:visibility="visible"-->
<!--                    android:id="@+id/btnAadhaar"/>-->

<!--            </LinearLayout>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:orientation="horizontal">-->

<!--                <ImageButton-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/voterView"-->
<!--                    android:background="@color/background"-->
<!--                    android:tag="Upload"-->
<!--                    android:visibility="gone"/>-->

<!--                <Button-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/upload_voter_card"-->
<!--                    android:textColor="@color/background"-->
<!--                    android:background="@drawable/button_round"-->
<!--                    android:padding="8dp"-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:visibility="visible"-->
<!--                    android:id="@+id/btnVoter"/>-->

<!--            </LinearLayout>-->

            <Button
                android:id="@+id/Next"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_round"
                android:text="@string/next"
                android:textColor="@color/background"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_account_login"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>